--- a/Day_006_HW.ipynb
+++ b/Day_006_HW.ipynb
@@ -189,13 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(307511, 7)\n",
       "   WEEKDAY_APPR_PROCESS_START_FRIDAY  WEEKDAY_APPR_PROCESS_START_MONDAY  \\\n",
       "0                                  0                                  0   \n",
       "1                                  0                                  1   \n",
@@ -231,6 +232,7 @@
     "Your Code Here\n",
     "\"\"\"\n",
     "sub_train = pd.get_dummies(sub_train)\n",
+    "print(sub_train.shape)\n",
     "print(sub_train.head())"
    ]
   },
